--- a/docs/final_report/FinalReport.tex
+++ b/docs/final_report/FinalReport.tex
@@ -9,8 +9,9 @@
 \usepackage{fancyvrb}
 \usepackage{comment}
 \usepackage{tabularx}
-\usepackage[color]{changebar}
+\usepackage[color,leftbars]{changebar}
 \usepackage{color}
+\usepackage{listings}
 
 \floatstyle{boxed}
 \restylefloat{figure}
@@ -35,7 +36,6 @@ generate \emph{computer programs}, which are the machine-readable
 representations of desired behaviour executed by a computer in order to 
 perform some useful computation.
 
-\begin{changebar}
 In many cases the user might not have a clear idea of how a calculation is 
 to be performed, but will be able to point out some concrete examples of 
 its expected behaviour: the user intuitively knows that for certain 
@@ -48,7 +48,6 @@ program, it might be the best approximation that a user can produce with
 limited knowledge of the problem domain; and if the examples are 
 sufficiently comprehensive, it has been seen that it is often enough to 
 make a good guess at what program the user has in mind.
-\end{changebar}
 
 This project concerns the generation of \emph{imperative} computer 
 programs, consisting of sequences of instructions to be executed in order, 
@@ -118,7 +117,6 @@ inductive synthesis of logic programs, as the main part of a system
 capable of inductively synthesising imperative programs.
 
 \section{Contributions}
-\begin{changebar}
 \begin{itemize}
     \item We present a tool which, given a list of input/output examples 
     over a given variable domain will generate a program satisfying the
@@ -140,7 +138,6 @@ capable of inductively synthesising imperative programs.
     separately from the rest of the program, also resulting in an 
     increase in speed of generation. See Chapter~\ref{chp:gensub}.
 \end{itemize}
-\end{changebar}
 
 \chapter{Background: Automatic Program Synthesis} \label{chp:bkgsyn}
 
@@ -313,6 +310,26 @@ solutions.
 
 \section{Program Encoding in ASP} \label{sec:progenc}
 
+In choosing an encoding of While programs as ASP facts, it is necessary to 
+consider that we eventually want to search regions in the space of all 
+possible programs, and that the program representation in ASP can have a 
+significant effect on the efficiency of this search.
+
+Acknowledging the fact that Answer Set Programs need to be fully grounded 
+before evaluation, and to reduce the size of this grounding, it was chosen 
+to use a ``flat'' representation of programs as a fixed-length sequence of 
+discrete instructions. This is in contrast with the hierarchical 
+representation of abstract syntax trees (ASTs) used elsewhere to reason 
+about While programs, which due to their dynamic shape generated a large 
+number of possible ground facts.
+
+The chosen ``flat'' representation comes with the drawback that it it 
+possible to represent nonsensical programs that don't correspond to any 
+AST, but these configurations can be eliminated without excessive cost by 
+the introduction of integrity constraints to enforce a hierarchical 
+structure. See Chapter~\ref{chp:synexm} for more details of how this is 
+implemented.
+
 Programs are represented as sequences of numbered \emph{lines}, where each 
 line contains an \emph{instruction}. The fact that the instruction 
 \verb|Instr| occurs on line \verb|L|, where \verb|L| ranges from 1 to some 
@@ -340,6 +357,19 @@ The instruction \verb|Instr| may be any of the following terms:
     be present immediately after the instructions encompassed by each loop.
 \end{tabularx}
 
+This representation bears a passing resemblance to the discrete, low-level 
+instructions used in assembly languages (or machine bytecode), except that 
+each instruction represents a higher-level program element, and so a greater 
+amount structure can be enforced on their arrangement.
+
+As the reader may have noted, the \verb|end_while| is not strictly necessary, 
+as its position could be inferred from the corresponding \verb|while| 
+instruction's \verb|Length|; but it is included to simplify the implementation 
+of a virtual machine for running these programs: when encountering an 
+\verb|end_while|, execution returns to the corresponding \verb|while| to 
+possibly repeat the loop, which is a discrete operation in itself. This is not 
+necessary for \verb|if| statements, so there is no \verb|end_if| instruction.
+
 Expressions \verb|Expr|, which may occur on the right-hand side of 
 \verb|set| instructions and inside boolean guards, take the following 
 forms, where \verb|Expr1| and \verb|Expr2| are also expressions:
@@ -365,12 +395,12 @@ and \verb|Expr2| are expressions:
 
 Below is an example of the program from Chapter~\ref{chp:intro}, which 
 computes powers of two, represented in this encoding, with comments on 
-the right giving the represented instruction in the familiar form:
+the right giving each represented instruction in its more familiar form:
 \begin{Verbatim}[samepage=true]
     line_instr(1, set(y, con(1))).                % y = 1;
     line_instr(2, while(lt(con(0), var(x)), 2)).  % while (0 < x) {
-    line_instr(3, set(y, mul(var(y), con(2))).    %     y = y * 2;
-    line_instr(4, set(x, sub(var(x), con(1))).    %     x = x - 1;
+    line_instr(3, set(y, mul(var(y), con(2)))).   %     y = y * 2;
+    line_instr(4, set(x, sub(var(x), con(1)))).   %     x = x - 1;
     line_instr(5, end_while).                     % }
 \end{Verbatim}
 
@@ -396,21 +426,143 @@ more instances of \verb|in/3| are defined, one for each input variable.
 The answer set contains facts of the following form:
 \begin{Verbatim}[samepage=true]
     run_var_out(RunID, Variable, FinalValue)
+    run_var_out(RunID, Variable, unset)
     run_does_not_halt(RunID)
 \end{Verbatim}
-The former signifies that \verb|RunID| terminated successfully with the 
-given final values for each variable; and the latter signifies that the 
-run did not successfully terminate, which could be because the number of 
-instructions executed exceeded \verb|time_max| (which would happen if the 
-program contained an infinite loop, for example), or because the value of 
-a variable exceeded the range defined by \verb|int_min| and 
-\verb|int_max|, or because of another illegal operation such as division 
-by zero.
 
-As an example, when we run \verb|run.lp| with the constants 
-\verb|time_max=99|, \verb|int_min=0|, \verb|int_max=32|, with the facts 
-from the example at the end of the previous section \ref{sec:progenc},
-and with the following additional facts:
+The first signifies that \verb|RunID| terminated successfully with the 
+given final value for a variable; the second signifies that the run 
+terminated successfully, but without assigning a value for a variable; and 
+the last signifies that the run did not successfully terminate, which 
+could be because the number of instructions executed exceeded 
+\verb|time_max| (which would happen if the program contained an infinite 
+loop, for example), or because the value of a variable exceeded the range 
+defined by \verb|int_min| and \verb|int_max|, or because of another 
+illegal operation such as division by zero.
+
+\subsubsection{Implementation}
+
+In order to achieve this, \verb|run.lp| computes for 
+every run \verb|R|, for every time \verb|T| with $0 \leq \verb|T| < 
+\verb|time_max|$, the line \verb|L| of the program currently being 
+executed, and the value of every variable. A particular run is considered 
+to have terminated successfully if an \verb|L| is reached for which there 
+is no \verb|line_instr|, i.e. the end of the program has been reached.
+
+Also needed are the values of arithmetic expressions \verb|E| and boolean 
+expressions \verb|B| for certain runs \verb|R| and at certain times 
+\verb|T|. The fact \verb|run_expr(R, T, E, C)| means that the expression 
+represented by the atom \verb|E| evaluates to the integer \verb|C|. The 
+fact \verb|run_bool(R, T, B)| means that the boolean expression \verb|B| 
+evaluates as true, and the absence of this fact means that it evaluates as 
+false. The rules implementing these predicates are lengthy but 
+straightforward, and so their implementation is omitted from this chapter 
+for brevity.
+
+Also defined are the domain predicates \verb|run/1|, \verb|int/1| and 
+\verb|var/1| listing the run IDs, the legal integer values and the 
+existing variables, which are derived straightforwardly from the 
+aforementioned constants and from \verb|line_instr/2|.
+
+The line number \verb|L| for run \verb|R| at time \verb|T| is represented 
+by \verb|run_line(R, T, L)|, and computed using the following rules:
+\begin{Verbatim}
+    % Identify lines where execution may jump to a remote point.
+    line_jump(L) :- line_instr(L, if(_,_)).
+    line_jump(L) :- line_instr(L, while(_,_)).
+    line_jump(L) :- line_instr(L, end_while).
+    
+    % For efficiency, project out if/while parameters.
+    line_instr_if_guard(L, G)     :- line_instr(L, if(G, _)).
+    line_instr_if_length(L, B)    :- line_instr(L, if(_, B)).
+    line_instr_while_guard(L, G)  :- line_instr(L, while(G, _)).
+    line_instr_while_length(L, B) :- line_instr(L, while(_, B)).
+    
+    % Start at line 1, and by default move to the next line at each step.
+    run_line(R,0,1) :-
+        run(R).
+    run_line(R,T+1,L+1) :-
+        line(L), run(R,T), run_line(R,T,L),
+        not line_jump(L), not run_fail(R,T).
+    
+    % Run if statements.
+    run_line(R,T+1,L+1) :-
+        run(R,T), run_line(R,T,L), line_instr_if_guard(L,B),
+        run_bool(R,T,B).
+    run_line(R,T+1,L+BodyLength+1) :-
+        run(R,T), run_line(R,T,L), line_instr(L,if(B,BodyLength)),
+        not run_bool(R,T,B).
+    
+    % Run while loops.
+    run_line(R,T+1,L+1) :-
+        % Boolean guard is true upon (re-)entering loop.
+        run(R,T), run_line(R,T,L), line_instr_while_guard(L,B),
+        run_bool(R,T,B).
+    run_line(R,T+1,L+BodyLength+2) :-
+        % Boolean guard is false upon (re-)entering loop.
+        run(R,T), run_line(R,T,L), line_instr(L,while(B,BodyLength)),
+        not run_bool(R,T,B).
+    run_line(R,T+1,HeadLine) :-
+        % Re-enter loop after reaching end_while.
+        run(R,T), run_line(R,T,L), line_instr(L,end_while),
+        line_instr_while_length(HeadLine, BodyLength),
+        L == HeadLine+BodyLength+1.
+\end{Verbatim}
+
+The value \verb|C| of the variable \verb|X| in run \verb|R| at time 
+\verb|T| is represented by \verb|run_var(R, T, X, C)|, and is implemented 
+by the following rules:
+\begin{Verbatim}
+    % Initialise variables to their input value, if any.
+    run_var(R,0,X,C) :- in(R,X,C), int(C).
+    
+    % Identify lines where a particular variable's value may change.
+    line_set(L,X) :- line_instr(L, set(X,_)).
+    
+    % On a set statement, update variables; otherwise, leave them constant.
+    run_var(R,T+1,X,C) :-
+        run_line(R,T,L), not line_set(L,X),
+        run_var(R,T,X,C), int(C).
+    run_var(R,T+1,X,C) :-
+        run_line(R,T,L), line_set(L,X), line_instr(L,set(X,E)),
+        run_expr(R,T,E,C), int(C).
+    
+    % Identify expressions which evaluate to a legal result.
+    run_expr_not_fail(R,T,E) :- run_expr(R,T,E,_).
+    
+    % Identify the time at which a run fails due to illegal arithmetic.
+    run_fail(R,T) :-
+        run_line(R,T,L), line_set(L,X), line_instr(L,set(X,E)),
+        not run_expr_not_fail(R,T,E).
+\end{Verbatim}
+
+Finally, in order to make use of the computed results and to define 
+\verb|run_var_out| and \verb|run_does_not_halt| mentioned above, some 
+further computation is needed, and is implemented by the following rules:
+
+\begin{Verbatim}[samepage=true]
+    % run(R,T) if test case R runs to at least time T.
+    run(R,T) :- run_line(R,T,L), T<time_max, line(L).
+    
+    % run_halt(R,T) if test case R halts normally at time T.
+    run_halt(R,T) :- run_line(R,T,L), T<time_max, not line(L).
+    
+    run_does_halt(R) :- run_halt(R,_).
+    run_does_not_halt(R) :- run(R), not run_does_halt(R).
+    
+    % run_var_out(R,X,C) if the final value of X in run R is C.
+    run_var_out(R,X,C)     :- run_var(R,T,X,C), not run(R,T).
+    run_var_out(R,X,unset) :- run(R), var(X), not run_var_out_set(R,X).
+    run_var_out_set(R,X)   :- run_var_out(R,X,C), C != unset.
+\end{Verbatim}
+
+\subsection{Example Programs}
+
+\subsubsection{Powers of Two}
+When we run \verb|run.lp| with the constants \verb|time_max=99|, 
+\verb|int_min=0|, \verb|int_max=32|, with the facts from the example at 
+the end of Section~\ref{sec:progenc}, and with the following additional 
+facts:
 \begin{Verbatim}[samepage=true]
     in(run0,x,0).
     in(run1,x,1).
@@ -433,9 +585,61 @@ Which as we would expect gives the correct result, with $y = 2^{x_0}$,
 where $y$ is the final value of \verb|y| and $x_0$ is the initial value of 
 \verb|x|.
 
+\subsubsection{Fibonacci Sequence}
+The Fibonacci Sequence $(F_n)_{n=1}^\infty$, given by $F_1=F_2=1$, 
+$F_{n+2}=F_{n}+F_{n+1}$, can be computed by the following program, which 
+takes as input \verb|n|, and produces $\verb|f|=F_{\verb|n|}$, the 
+\verb|n|th term in the sequence:
+\begin{Verbatim}[samepage=true]
+    line_instr(1, set(e, con(0))).                % e = 0;
+    line_instr(1, set(f, con(1))).                % f = 1;
+    line_instr(2, while(lt(con(1), var(n)), 3)).  % while (n > 1) {
+    line_instr(3, set(f, add(var(e), var(f)))).   %   f = e + f;
+    line_instr(4, set(e, sub(var(f), var(e)))).   %   e = f - e;
+    line_instr(5, set(n, sub(var(n), con(1)))).   %   n = n - 1;
+    line_instr(6, end_while).                     % }
+\end{Verbatim}
+
+We can run this to compute the first 6 terms of the sequence using the 
+following parameters:
+\begin{Verbatim}[samepage=true]
+    #const time_max=30.
+    #const int_min=0.
+    #const int_max=10.
+    
+    in(run1,n,1).
+    in(run2,n,2).
+    in(run3,n,3).
+    in(run4,n,4).
+    in(run5,n,5).
+    in(run6,n,6).
+\end{Verbatim}
+
+Which results in an answer set containing the following results:
+\begin{Verbatim}[samepage=true]
+    run_var_out(run1,n,1) run_var_out(run1,e,0) run_var_out(run1,f,1)
+    run_var_out(run2,n,1) run_var_out(run2,e,1) run_var_out(run2,f,1) 
+    run_var_out(run3,n,1) run_var_out(run3,e,1) run_var_out(run3,f,2)
+    run_var_out(run4,n,1) run_var_out(run4,e,2) run_var_out(run4,f,3)
+    run_var_out(run5,n,1) run_var_out(run5,e,3) run_var_out(run5,f,5)
+    run_var_out(run6,n,1) run_var_out(run6,e,5) run_var_out(run6,f,8)
+\end{Verbatim}
+In the third column, we can see the final values of \verb|f|, which indeed 
+form the familiar Fibonacci sequence. The second column, with the values 
+of \verb|e|, forms the same sequence but shifted forward by one space, 
+which offers an insight into how the program works.
+
+\subsubsection{Median of Three Numbers}
+
+\subsubsection{$n$th Prime Number}
+A positive integer $p$ is prime if it has no proper divisors, i.e. there 
+is no integer $k$ such that $1<k<p$ and $p=kj$ for some integer $j$. A 
+result in elementary number theory says that there are infinitely many 
+prime numbers, so we can define a sequence $(p_n)_{n=1}^\infty=(2, 3, 5, 
+7, ...)$, where $p_n$ is the $n$th prime number.
+
 \chapter{Synthesis of Programs from User Examples} \label{chp:synexm}
 
-\begin{changebar}
 This chapter will detail the part of our system which takes a list of user 
 examples as input, and gives a program satisfying those examples as 
 output. It consists of two components:
@@ -451,7 +655,6 @@ output. It consists of two components:
     necessary with different parameters to find a program meeting the task 
     specification, and prints it in a human-readable form.
 \end{itemize}
-\end{changebar}
 
 \section{Task Specification Language} \label{sec:spclng}
 The user specifies a program synthesis task by writing a configuration file 
@@ -563,6 +766,7 @@ program can be found, the limit is increased by \ttt{Lstep} and the search
 repeated, until the limit exceeds \ttt{Lmax}.
 
 \section{Implementation}
+
 
 \section{Examples}
 Below is an example of how we might use this language to specify a program 
